k8s/cafe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cafe-service
  labels:
    app: cafe
spec:
  type: NodePort
  selector:
    app: cafe
  ports:
    - port: 80
      targetPort: 80
