k8s/cafe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:369668972483:certificate/031f2175-07d2-4051-b2fa-b2e33a124d8c
spec:
  ingressClassName: alb
  rules:
    - host: cafe.gopinaidu2451.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cafe-service
                port:
                  number: 80
